--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ repository               : "Mindfulbrain17/Mindfulbrain17.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Anant Goyal"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "A student for Life"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Way Beyond Infinity"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "anantgoyal17@proton.me" 
 
   # Academic websites
   academia         : # URL
@@ -51,13 +51,13 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "Mindfulbrain17"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -74,7 +74,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : Anant_Goyal_
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
